src/style.css
/* scroll bar style */

html {
  scrollbar-face-color: #646464;
  scrollbar-base-color: #646464;
  scrollbar-3dlight-color: #646464;
  scrollbar-highlight-color: #646464;
  scrollbar-track-color: #000;
  scrollbar-arrow-color: #000;
  scrollbar-shadow-color: #646464;
}
::-webkit-scrollbar {
  width: 8px;
  height: 3px;
}

::-webkit-scrollbar-button {
  background-color: #666;
}

::-webkit-scrollbar-track {
  background-color: #646464;
}

::-webkit-scrollbar-track-piece {
  background-color: #000;
}

::-webkit-scrollbar-thumb {
  height: 50px;
  background-color: #666;
  border-radius: 3px;
}

::-webkit-scrollbar-corner {
  background-color: #646464;
}

::-webkit-resizer {
  background-color: #666;
}

/* scroll bar style end  */
body {
  font-family: Poppins;
  background: #333;
  font-size: 20px;
}

.container {
  max-width: 2000px;
  margin: auto;
}

.social-icons {
  display: flex;
  flex-direction: column;
  gap: 40px;
  font-size: 30px;
  align-items: center;
  justify-content: center;
}

.social-icons>i {
  cursor: pointer;
}

.menu-open-item-2 {
  transform: rotate(45deg);
  transition: all 0.5s ease-in;
}

.menu-open-item-3 {
  transition: all 0.5s ease-in;
  transform: translate(0, -23px) rotate(-45deg);
}

.menu {
  height: 25px;
  aspect-ratio: 1/1;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  cursor: pointer;
  margin-top: 20px;
  transition: all 0.5s ease-in;
}

.menu>p {
  background-color: #fff;
  width: 30px;
  height: 2px;
  transition: all 0.5s ease-in;
}

.scroll-down {
  transform: rotate(90deg);
}

/* Hide scrollbar for Chrome, Safari and Opera */

.scrollbar-hidden::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.scrollbar-hidden {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}

/* Slider */
.slider-controller {
  width: 5vw;
  height: 5px;
  margin-top: 20px;
  background-color: #828282;
  display: inline-block;
  transition: 0.6s ease;
  cursor: pointer;
}

.slider-controller-active {
  background-color: #e3b97a;
  transition: 0.6s ease;
}

/* End Slider */
.btn {
  padding-block: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-inline: 30px;
  border: 1px solid #e3b97a;
  /* font-size: clamp(14px, 3vw, 29px); */
  font-size: clamp(14px, 1.4vw, 16px);
  border-radius: 5px;
  transition: all 0.25s;

  color: #e3b97a;
}

.btn:hover {
  border: 1px solid #857152;
  background: -webkit-linear-gradient(0deg, #7e5936, #d5a45a);
  color: #fff;
  transition: all 0.25s;
}

.hero-text {
  font-size: clamp(48px, 5vw, 96px);
  font-family: serif;
  font-weight: bold;
  line-height: clamp(48px, 5vw, 96px);
}

.gradient-text {
  /* background: -webkit-linear-gradient(0deg, #d5a45a90, #e3b97a); */
  background: -webkit-linear-gradient(0deg,
      /* #7e5936, */
      #d5a45a90,
      #e3b97a,
      #f5cb86,
      #f5cb86);

  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.hero-image {
  width: clamp(200px, 75%, 700px);
}

.hero-date {
  font-weight: 100;
  letter-spacing: 3px;
  color: rgba(255, 255, 255, 0.753);
  font-size: 21px;
}

.hero-date-line {
  width: 40px;
  height: 1px;
  background: #ffffff52;
}

.header-title {
  font-size: clamp(30px, 5vw, 80px);
  font-weight: 200;
  text-align: center;
  font-family: raleway;
  font-weight: 100;
  letter-spacing: 10px;
}

.header-subtitle {
  font-size: clamp(1.4rem, 3.5vw, 2rem);
}

.paragraph {
  font-size: clamp(1rem, 3vw, 1.2rem);
}

.hor-line {
  width: 50%;
  max-width: 300px;
  height: 1px;
  display: inline-block;
  background: #707070;
}

#time-container {
  display: flex;
  justify-content: space-between;
  margin-block: clamp(20px, 3vw, 150px);
}

.rotated-mintex {}

.time {
  width: clamp(100px, 15vw, 400px);
  /* height: clamp(100px, 15vw, 250px); */
  aspect-ratio: 1/1;
  border-radius: 1000px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid #757575;
  flex-direction: column;
}

/*  */
.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.progressbar {
  width: clamp(101px, 15.5vw, 401px);
  aspect-ratio: 1/1;
  background-color: rgb(0, 0, 0);
  border-radius: 50%;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  overflow: hidden;
}

.half-circle,
.half-circle-top {
  position: absolute;
  top: 0;
  left: 0;
  width: 50%;
  height: 100%;
  transform-origin: right center;
}

.half-circle:nth-child(1) {
  background-color: #f9b34a;
}

.half-circle:nth-child(2) {
  background-color: #f9b34a;
}

.half-circle-top {
  background-color: #707070;
}

.inner-circle {
  width: 96%;
  border-radius: 50%;
  aspect-ratio: 1/1;
  display: flex;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: column;
}

.progressbar-circle {
  /* width: 39.4rem; */
  /* height: 39.4rem; */
  width: clamp(100px, 15vw, 400px);
  aspect-ratio: 1/1;
  background-color: #000;
  border-radius: 50%;
  color: #fff;
  font-size: 4rem;
  z-index: 10;
}

/*  */
.time>p,
.inner-circle>p {
  font-size: clamp(15px, 6vw, 35px);
  text-align: center;
  display: flex;
  flex-direction: column;
}

.time>p>span,
.inner-circle>p>span {
  font-size: clamp(12px, 2.5vw, 20px);
  font-weight: 200;
}

.video {
  object-fit: cover;
  width: clamp(250px, 30vw, 500px);
  /* height: clamp(250px, 30vw, 500px); */
  aspect-ratio: 1/1;
  border-radius: 100%;
  box-shadow: 0px 0px 50px 50px #e3b97a40;
}

.video-icon {
  font-size: 60px;
  color: white;
}

.about-text {
  font-weight: bold;
  line-height: 1;
  color: #e3b97a;
  text-align: left;
  text-transform: uppercase;
  /* font-size: clamp(30px, 6vw, 80px); */
  font-size: clamp(40px, 4vw, 80px) !important;
}

.about-scrollable {
  margin-block: 20px;
  height: clamp(130px, 12vw, 600px);
  /* height: 25%; */
}

.about-excerpt {
  /* width: 80%; */
  font-weight: 100;
}

.play-pause {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 50px;
  position: absolute;
  z-index: 20;
  width: 100%;
  height: 100%;
}

.video-controls {
  color: #e3b97a;
}

.join-us-card {
  background: #7c6f63;
  /* max-width: 25vw; */
  max-width: 60%;
  aspect-ratio: 1/1;
  border-radius: 30px;
  box-shadow: 0px 0px 30px 12px #e3b97a40;
}

.card-box {
  text-align: center;
  margin: 30px;
  margin-inline: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
}

.card-box:nth-child(1),
.card-box:nth-child(3) {
  border-right: 1px solid white;
}

.card-box>h3 {
  font-size: clamp(18px, 3vw, 200px);
  font-weight: 100;
  font-family: raleway;
  color: whitesmoke;
}

.card-box>span {
  font-size: clamp(12px, 1vw, 30px);
  letter-spacing: 2px;
  font-weight: 300;
}

.footer {
  position: relative;
}

.footer img {
  width: 100%;
  opacity: 0.3;
}

.footer .overlay {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  font-weight: 300;
  flex-direction: column;
  text-align: center;
  font-size: clamp(1rem, 4vw, 100px);
  display: flex;
  align-items: center;
  justify-content: center;
}

/* time-line */
.time-line-card-container {}

.time-line {
  display: flex;
  /* height: 100vh; */
  flex-direction: column;
  align-items: center;
}

.line {
  width: 1px;
  flex-grow: 1;
  background-color: #f0dfc6;
}

.circle {
  width: clamp(20px, 4vw, 50px);
  height: clamp(20px, 4vw, 50px);
  border-radius: 100px;
  background-color: #f0dfc6;
}

.time-line-card {
  display: flex;
  flex-direction: column;
  align-items: end;
}

.time-line-time {
  font-size: clamp(1em, 1vw, 18px);
  font-weight: 700;
  color: #f0dfc6;
}

.time-line-date {
  font-size: clamp(1em, 2vw, 32px);
  font-weight: 200;
}

.time-line-image-header {
  font-weight: bold;
  font-size: clamp(1em, 3vw, 24px);
}

.time-line-mintex {
  font-size: clamp(15px, 7vw, 200px);
  opacity: 0.5;
  font-weight: 100;
  letter-spacing: clamp(13px, 2vw, 60px);
  font-family: raleway;
}

.time-line-card-image {
  width: clamp(72px, 30vw, 260px);
  /* aspect-ratio: 1/1 !important; */
  object-fit: cover;
  border-radius: 20px;
  aspect-ratio: 12/19;
  margin: 20px 0;
  box-shadow: 0px 0px 30px 12px #e3b97a40;
}

/* Contact us */
.contact-us {
  /* font-size: 40px; */
  display: flex;
  flex-direction: column;
  justify-items: flex-start;
  gap: 10px;
}

.contact-us {
  display: flex;
}

.contact-us>label {
  height: fit-content;
  background: red;
  padding: 0;
}

.input {
  width: 100%;
  height: clamp(35px, 4vw, 60px);
  padding-block: 5px;
  padding-inline: 20px;
  border: 1px solid #e3b97a;
  font-size: clamp(11px, 2vw, 29px);
  color: #fff;
  font-size: clamp(14px, 1.4vw,16px);
  background-color: transparent;
}

.text-area {
  height: 200px;
}
/* .carousel .one{
  background-image: url(https://cdn.pixabay.com/photo/2016/10/14/19/21/canyon-1740973__340.jpg);
  background-size: 100% 100%;
}

.carousel .two {
  background-image: url(https://cdn.pixabay.com/photo/2018/05/30/00/24/thunderstorm-3440450__340.jpg);
  background-size: 100% 100%;
}

.carousel .three{
  background-image: url(https://images.unsplash.com/photo-1585383234137-2367d3c5302d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
  background-size: 100% 100%;
} */

